[gd_scene load_steps=7 format=3 uid="uid://ddrvhm85dajxu"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_1vwky"]
[ext_resource type="PackedScene" uid="uid://cyd3ymc1eupi3" path="res://rad.tscn" id="2_2o2i8"]
[ext_resource type="Texture2D" uid="uid://d1dgvm2lt6omq" path="res://bodens-kommun.png" id="3_fq470"]

[sub_resource type="Animation" id="Animation_ojskl"]
resource_name = "Bk_gunga"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bodens-kommun:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533]
}

[sub_resource type="Animation" id="Animation_bq27v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bodens-kommun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iw8rl"]
_data = {
"Bk_gunga": SubResource("Animation_ojskl"),
"RESET": SubResource("Animation_bq27v")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1vwky")

[node name="Panel2" type="Panel" parent="."]
offset_right = 1600.0
offset_bottom = 800.0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="leDate" type="LineEdit" parent="."]
offset_left = 481.0
offset_top = 4.0
offset_right = 624.0
offset_bottom = 35.0
alignment = 1

[node name="leArbersplats" type="LineEdit" parent="."]
offset_left = 842.0
offset_top = 4.0
offset_right = 1202.0
offset_bottom = 35.0
alignment = 1

[node name="leHandläggare" type="LineEdit" parent="."]
offset_left = 842.0
offset_top = 40.0
offset_right = 1202.0
offset_bottom = 71.0
alignment = 1

[node name="leSEARCH" type="LineEdit" parent="."]
offset_left = 8.0
offset_top = 184.0
offset_right = 296.0
offset_bottom = 215.0

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 81.0
offset_top = 1.0
offset_right = 157.0
offset_bottom = 32.0
text = "Get Data"

[node name="Label" type="Label" parent="."]
offset_left = 8.0
offset_top = 156.0
offset_right = 262.0
offset_bottom = 179.0
text = "Sök artikel"

[node name="lDatum" type="Label" parent="."]
offset_left = 417.0
offset_top = 8.0
offset_right = 481.0
offset_bottom = 31.0
text = "Datum:"

[node name="lText" type="Label" parent="."]
offset_left = 149.0
offset_top = 57.0
offset_right = 379.0
offset_bottom = 106.0
text = "Förrådsrekvisitions hanterare
SBF - VAA"
horizontal_alignment = 1

[node name="lText2" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0.247059)
offset_left = 168.0
offset_top = 128.0
offset_right = 398.0
offset_bottom = 155.0
scale = Vector2(0.74, 0.74)
text = "©2023 Christoffer Sundbom"
horizontal_alignment = 1

[node name="lArbetsplats" type="Label" parent="."]
offset_left = 743.0
offset_top = 8.0
offset_right = 836.0
offset_bottom = 31.0
text = "Arbetsplats:"

[node name="lHandlaggare" type="Label" parent="."]
offset_left = 733.0
offset_top = 41.0
offset_right = 836.0
offset_bottom = 64.0
text = "Handläggare:"

[node name="lbReka" type="Label" parent="."]
offset_left = 1452.0
offset_top = 4.0
offset_right = 1596.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "XXXXXXXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="."]
offset_left = 8.0
offset_top = 220.0
offset_right = 364.0
offset_bottom = 600.0

[node name="btnSearch" type="Button" parent="."]
offset_left = 302.0
offset_top = 184.0
offset_right = 363.0
offset_bottom = 215.0
text = "SÖK"

[node name="btnAdd" type="Button" parent="."]
offset_left = 9.0
offset_top = 604.0
offset_right = 289.0
offset_bottom = 662.0
text = "Lägg till"

[node name="Label2" type="Label" parent="."]
offset_left = 443.0
offset_top = 72.0
offset_right = 1116.0
offset_bottom = 95.0
text = "RSK                                   Beskrivning                                    Antal      á-pris       Summa        Slag        Ansvar      Verks          Akt         Objekt     Projekt     Motp"

[node name="leSumma" type="LineEdit" parent="."]
offset_left = 208.0
offset_top = 752.0
offset_right = 406.0
offset_bottom = 791.0
theme_override_colors/font_uneditable_color = Color(0.847059, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 22
text = "12123123"
placeholder_text = "SUMMA"
alignment = 1
editable = false

[node name="leAntal" type="LineEdit" parent="."]
offset_left = 296.0
offset_top = 632.0
offset_right = 363.063
offset_bottom = 663.0
text = "1"

[node name="Label2" type="Label" parent="leAntal"]
layout_mode = 0
offset_top = -27.0
offset_right = 46.0
offset_bottom = -4.0
text = "Antal:"

[node name="btnClear" type="Button" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 4.0
offset_top = 694.0
offset_right = 125.0
offset_bottom = 741.0
text = "RENSA"

[node name="btnExport" type="Button" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = 4.0
offset_top = 747.0
offset_right = 125.0
offset_bottom = 794.0
text = "SKAPA
"

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.623529)
offset_left = 412.0
offset_top = 96.0
offset_right = 1592.0
offset_bottom = 794.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Rad1" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad2" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad3" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad4" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad5" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad6" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad7" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad8" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad9" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad10" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad11" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad12" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad13" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad14" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad15" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad16" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad17" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad18" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad19" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Rad20" parent="Panel/VBoxContainer" instance=ExtResource("2_2o2i8")]
layout_mode = 2

[node name="Bodens-kommun" type="Sprite2D" parent="."]
position = Vector2(77, 80)
scale = Vector2(0.403846, 0.403846)
texture = ExtResource("3_fq470")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iw8rl")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="btnSearch" to="." method="_on_btn_search_pressed"]
[connection signal="pressed" from="btnAdd" to="." method="_on_btn_add_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExport" to="." method="_on_btn_export_pressed"]
